* Tue Nov 27 2007 Jesse Keating <jkeating@redhat.com>
- Enable TMPDIR again so that anconda-runtime working files
go to the working dir.

* Thu Nov 22 2007 Jesse Keating <jkeating@redhat.com>
- Print a usage if no options are passed
- Correct a man page typo
- Update the F8 config to use released repos

* Wed Nov 07 2007 Jesse Keating <jkeating@redhat.com>
- Preserve timestamps on release note files

* Mon Oct 29 2007 Jesse Keating <jkeating@redhat.com>
- Check to see if the cached package is same size or larger and if so remove
it.  Otherwise regets will freak out.

* Tue Oct 23 2007 Jesse Keating <jkeating@redhat.com>
- Add java-development to the group set.

* Thu Oct 11 2007 Jesse Keating <jkeating@redhat.com>
- Add a cost to the media repo file.

* Tue Oct 02 2007 Jesse Keating <jkeating@redhat.com>
- Make sure we stuff a string value into ConfigParser.

* Wed Sep 26 2007 Jesse Keating <jkeating@redhat.com>
- Pull in all the optional Virt stuff
- Don't expire the metadata from Media repo.

* Tue Sep 25 2007 Jesse Keating <jkeating@redhat.com>
- Fix location of media.repo file.

* Tue Sep 18 2007 Jesse Keating <jkeating@redhat.com>
- Drop a .repo file on the root of the media.  Used after install.

* Fri Sep 14 2007 Jesse Keating <jkeating@redhat.com>
- Create repoview content in the tree
- Move the .composeinfo file into the directory we actually publish

* Wed Sep 12 2007 Jesse Keating <jkeating@redhat.com>
- Remove python2.5 needs (Mark McLoughlin)
- Consolidate the download code for easier maint. (Mark McLoughlin)
- Create a config class that can make using pungi modules easier. (Mark 
McLoughlin)
- Use url line in kickstart files as a repo

* Tue Sep 11 2007 Jesse Keating <jkeating@redhat.com>
- Fix a bug with default dest dir (notting)
- Include a man page (dcantrell)
- Fix a bug with file:// based repos

* Thu Aug 30 2007 Jesse Keating <jkeating@redhat.com>
- Fix some bugs with source iso creation
- Add source repo to kickstart file